packages/typ/tests/fixtures/diagnostics/0017_core_tuple_annotation_mismatch_02.ml.infer.expected
File "0017_core_tuple_annotation_mismatch_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0017_core_tuple_annotation_mismatch_02 is not a valid module name.

File "0017_core_tuple_annotation_mismatch_02.ml", line 1, characters 25-29:
1 | let beta : int * bool = (true, 1)
                             ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
