packages/typ/tests/fixtures/diagnostics/0017_core_tuple_annotation_mismatch_02.ml
let beta : int * bool = (true, 1)
